refactor: AlarmService의 readAlarm() 메서드에서 권한 체크 로직 도메인으로 이동